@@ -1,3 +1,8 @@
+2004-10-11 Hasso Tepper <hasso at quagga.net>
+
+	* command.h: Sync DEFUNSH with other macros.
+	* sockunion.c, sockunion.h: More const strings.
+
 2004-10-11 Paul Jakma <paul@dishone.st>
 
 	* thread.c: (funcname_thread_add_timer) 
